newsdeed and notifications

--- a/recruit/src/main/resources/db/changelog/db.changelog-master.yaml
+++ b/recruit/src/main/resources/db/changelog/db.changelog-master.yaml
@@ -2886,6 +2886,11 @@ databaseChangeLog:
                  constraints:
                    nullable: false
              - column:
+                 name: delivered
+                 type: boolean
+                 constraints:
+                   nullable: false
+             - column:
                  name: viewed
                  type: boolean
                  constraints:
