new newsfeed working. Needs some unit tests and more testing

--- a/recruit/src/main/resources/db/changelog/db.changelog-master.yaml
+++ b/recruit/src/main/resources/db/changelog/db.changelog-master.yaml
@@ -2924,3 +2924,21 @@ databaseChangeLog:
               referencedTableName: chat_participants
               referencedTableSchemaName: chats
               referencedColumnNames: id
+  - changeSet:
+     id: addColumns-notification-emails
+     author: kevin
+     changes:
+       - addColumn:
+           tableName: chat_participants
+           schemaName: chats
+           columns:
+             - column:
+                 name: disable_noficication_emails
+                 type: boolean
+                 constraints:
+                   default: false
+             - column:
+                 name: last_nofication_email_sent
+                 type: timestamp
+                 constraints:
+                   nullable: true
