--- a/recruit-gui/angular.json
+++ b/recruit-gui/angular.json
@@ -27,7 +27,10 @@
 		            "tsConfig": "tsconfig.app.json",
 		            "assets": [
 		              "src/favicon.ico",
-		              "src/assets"
+		              "src/assets",
+					  "src/BingSiteAuth.xml",
+					  "src/googleea4f0564b4240441.html",
+					  "src/yandex_0b14b7ce9c3a54cc.html"
 		            ],
 		            "styles": [
 		              "src/custom-theme.scss",
