--- a/recruit/src/main/resources/db/changelog/db.changelog-master.yaml
+++ b/recruit/src/main/resources/db/changelog/db.changelog-master.yaml
@@ -2941,4 +2941,15 @@ databaseChangeLog:
                  name: last_nofication_email_sent
                  type: timestamp
                  constraints:
-                   nullable: true
+                   nullable: true				   
+  - changeSet:
+     id: addColumn-last-newsfeed-view
+     author: kevin
+     changes:
+       - addColumn:
+           tableName: chat_participants
+           schemaName: chats
+           columns:
+             - column:
+                 name: last_nofication_newsfeed_view
+                 type: timestamp
